--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,7 @@ a:hover {
 .single-more-items a {
 	display: block;
 	position: relative;
+	text-align: center;
 }
 .single-more-items a img {
 	height: 125px;
